[gd_scene load_steps=6 format=3 uid="uid://pf7wue6sfyp5"]

[ext_resource type="Script" path="res://Prefabs/swing.gd" id="1_jbk80"]
[ext_resource type="Texture2D" uid="uid://dym27qawilmbh" path="res://Textures/Projectiles/swing_sheet.png" id="2_jkjo6"]

[sub_resource type="Animation" id="Animation_aiwml"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSwing/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSwing/CollisionPolygon2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSwing/CollisionPolygon2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_fn35n"]
resource_name = "swing_particle"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSwing/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSwing/CollisionPolygon2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(11, 0), Vector2(17, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSwing/CollisionPolygon2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(0.75, 0.75), Vector2(0.6, 0.6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_235fb"]
_data = {
"RESET": SubResource("Animation_aiwml"),
"swing_particle": SubResource("Animation_fn35n")
}

[node name="PlayerSwing" type="Area2D" groups=["PlayerSwing"]]
z_index = 10
collision_layer = 64
collision_mask = 16
script = ExtResource("1_jbk80")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(24, 0)
scale = Vector2(1.5, 1)
texture = ExtResource("2_jkjo6")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_235fb")
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(14, -10, 33, -10, 43, -4, 43, 4, 33, 10, 14, 10)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
